--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -15,6 +15,20 @@
       "build_entry_point": "docs",
       "template_folder": "_themes",
       "version": 0
+    },
+    {
+      "docset_name": "AdaptiveCardsClone",
+      "build_source_folder": "AdaptiveCardsClone",
+      "build_output_subfolder": "AdaptiveCardsClone",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": true,
+      "type_mapping": {
+        "Conceptual": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
     }
   ],
   "notification_subscribers": [],
